Fixed UI alignment issues

--- a/src/app/blogs/blogs.component.css
+++ b/src/app/blogs/blogs.component.css
@@ -19,6 +19,7 @@
 .card-block {
   background: #fff;
   height: 100%;
+  padding: 10px 0 10px 0;
 
   /* height: 120px; */
 }
@@ -26,24 +27,25 @@
 .card-title {
   color: #03c;
   font-size: 14px;
-  margin-bottom: 0;
-  padding: 10px;
+  height: 35px;
+  margin: 0 10px 10px 10px;
+  overflow: hidden;
 }
 
 .card-description {
   font-size: 14px;
-  min-height: 50px;
-  padding-left: 10px;
-
-  /* padding: 0px 10px 8px 10px; */
+  height: 45px;
+  overflow: hidden;
+  padding: 0 10px 5px 10px;
 }
 
 .card-date {
   border-top: 1px solid #edebeb;
   font-size: 13px;
+  height: 25px;
   margin: 0;
-  padding: 5px;
-  padding: 7px 10px;
+  overflow: hidden;
+  padding: 5px 10px 0 10px;
 }
 
 .blog .card .card-block .category {
@@ -77,6 +79,11 @@
   padding: 7px 20px;
   text-align: right;
   width: auto;
+}
+
+.card-container {
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .blog-card {
